changes since 2.9.16:
	- moved to newer automake (1.6)

changes since 2.9.15:
	- zone2sql now compiles again (error on STDIN_FILENO) (Derrik Pates)
	- fixed some uninitialized reads
	- fixed a bogus listen call
	- Solaris dumped core when parsing incoming LOC records (machine to
	debug on provided by Andrew Mulholland)
	- delete instead of delete[] in MTasker (thanks valgrind!)
	- several uninitialized variables used (thanks valgrind!)
	- MySQL can now be used on a different port again (Chris Anderton)
	- big speedup in pdns_recursor
	- I think, not sure, that pdns_recursor throttling did not always
		throttle well enough
	- qgen tool
	- updated b.root-servers.net address
	- SOA serials & sundry are unsigned, itoa messed that op (Michel Stol)
	- chroot now no longer needs so many files in the chroot
	- cleanup the controlsocket when not in use anymore
	- LDAP cleanup, better random shuffling of hosts
	- bigendian fixes for mips && solaris recursor proxy (Remco Post)
	- included geobackend (Mark Bergsma)

changes since 2.9.14:
	- you can now do this:
		dig axfr ds9a.nl @213.244.168.210 |    \
		/usr/bin/zone2sql --gmysql --zone=-  | \
		mysql -u pdns pdns
	- the '-' is new
	- there is now better duplicate zone detection
	- allow-recursion-override works but was on by default
	- logging was off
	- debian/rules forgot sqllite
	- removed libpqpp from build-depends
	- recursor accidentally linked in mysql (christopher meerwald)
	- fixed instability in pdns_recursor (had to do with the sorted nameserver stuff)
	- improved output of stats
	- LDAP compiles again!


changes since 2.9.13:
	- logging to syslog can now be restricted (norbert)
	- SOA canonic
	- zone2ldap cleanup
	- LDAP:
> A big patch for the ldapbackend:
> - - Changes to support different lookup methods
> - - Better exception handling
> - - Better support for load distribution
> - - Many cleanups
	- errno compilation fixes in LDAP code (Norbert)