@@ -1,5 +1,10 @@
 changes since 2.9.16:
 	- moved to newer automake (1.6)
+	- BUG!! = in passwords
+	- better check for % in queries
+	- make gmysql compile on Solaris
+	- be more precise in detecting duplicate MX records
+	- allow version override
 
 changes since 2.9.15:
 	- zone2sql now compiles again (error on STDIN_FILENO) (Derrik Pates)
